RESOLVED FIXED221854
Cues displayed during end time
https://bugs.webkit.org/show_bug.cgi?id=221854
Summary Cues displayed during end time
Joey Parrish
Reported 2021-02-12 15:58:35 PST
Created attachment 420187 [details] A simple page (45 lines) to repro the issue Safari version 14 What steps will reproduce the problem? (1) Open the attached HTML repro case (45 lines total) (2) Optional: observe the sequence of events in the dev console logs What is the expected result? The repro page will insert two cues (1-2s and 2-3s), then seek to exactly 2s. Only one cue should be displayed at time 2s (the second one). What happens instead? In Chrome/Edge 88 and Safari 14, both are displayed at once. In Firefox 84, only the second cue is displayed (correct behavior). Additional context: It recently was pointed out to us in Shaka Player that our DOM-UI-based cue display got this wrong, too. The fix turned out to be a single character (> instead of >=). You may find something similar in WebKit. https://github.com/google/shaka-player/pull/3152/files
Attachments
A simple page (45 lines) to repro the issue (1.49 KB, text/html)
2021-02-12 15:58 PST, Joey Parrish
no flags
Joey Parrish
Comment 1 2021-02-12 15:59:32 PST
Eric Carlson
Comment 2 2021-02-16 08:48:44 PST
Thanks for the report Joey!
Joey Parrish
Comment 3 2021-02-16 09:39:19 PST
Happy to help! Thanks for taking a look.
Radar WebKit Bug Importer
Comment 4 2021-02-19 15:59:13 PST
Youssef Soliman
Comment 5 2022-05-17 14:32:30 PDT
EWS
Comment 6 2022-06-17 16:19:24 PDT
Committed r295647 (251652@main): <https://commits.webkit.org/251652@main> Reviewed commits have been landed. Closing PR #694 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.