Cues displayed during end time https://bugs.webkit.org/show_bug.cgi?id=221854 <rdar://problem/74541188>

Patch by Youssef Soliman <youssefdevelops@gmail.com> on 2022-06-17
Reviewed by Eric Carlson.

Fixed edge case with cue intervals that had end times that coincided
with the current media time in order to follow the spec.

Test: media/track/track-cue-endtime.html
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateActiveTextTrackCues):
* LayoutTests/media/track/track-cue-endtime-expected.txt: Added.
* LayoutTests/media/track/track-cue-endtime.html: Added.

Canonical link: https://commits.webkit.org/251652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295647 268f45cc-cd09-0410-ab3c-d52691b4dbfc